# nanollm-final

./: pyproject.toml
litellm/: __init__.py  exceptions.py
nanollm/: __init__.py  _http.py  _image.py  _structured.py  _types.py  client.py  exceptions.py
nanollm/providers/: __init__.py  anthropic.py  aws.py  azure.py  base.py  google.py  huggingface.py  local.py  openai.py
tests/: test_api.py  test_client.py  test_compat.py  test_exceptions.py  test_image.py  test_providers.py  test_structured.py  test_types.py
