[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanollm"
version = "1.0.0"
description = "Minimal litellm replacement -- 1 dep, class-based providers, built-in retry, vision, structured output"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["httpx[http2]>=0.27"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.setuptools]
packages = ["nanollm", "nanollm.providers", "litellm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
